# goit-web-hw-5

./: README.md  logs.txt  privatbank_rates.py  pyproject.toml
